2000-07-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (real_fetch_mail): Back to the old way to avoid
	g_warnings, yay. Also fix append to send a flags argument (0)

2000-07-12  Chris Toshok  <toshok@helixcode.com>

	* mail-config.c (providers_config_new): fix some cut & paste bung.

2000-07-12  Chris Toshok  <toshok@helixcode.com>
	
	* mail-format.c (setup_function_table): add "message/news" to the
	mime_function_table using the same handler as message/rfc822.

2000-07-12  Chris Toshok  <toshok@helixcode.com>

	* mail-config.glade*: add news server tab to dialog.

	* mail-config.c (on_NewsServerConfigDialogButton_clicked): new function.
	(on_clistNewsServers_select_row): new function.
	(on_cmdNewsServersAdd_clicked): new function.
	(on_cmdNewsServersEdit_clicked): new function.
	(on_cmdNewsServersDelete_clicked): new function.
	(providers_config_new): mirror the source tab's code to fill in
	the news server tab.
	(write_config): save out the news server.
	(create_news_server_config_dialog): new function.
	(create_news_server_page): new function.

2000-07-12  Peter Williams  <peterw@helixcode.com>

	* mail-display.c (save_data): Change from evolution_dir to
	g_get_home_dir() for default location of save file.

2000-07-11  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (real_fetch_mail): Changed to use 
	camel_folder_move_message_to () rather than get_message () and then
	append_message (). This also makes it so we don't have to worry about
	fetching message flags to pass to the new append_message () method.

	* folder-browser.c (folder_browser_load_folder): Disable
	Search capability menu/entry if folder doesn't support it.

	* message-list.c (message_list_regenerate): Don't perform
	a search if the folder doesn't support it.

2000-07-11  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (real_send_mail): Set the post_send_data flag rather
	than toggling it. (Maybe we'll need more control over it later,