@@ -1,3 +1,15 @@
+2000-07-13  Dan Winship  <danw@helixcode.com>
+
+	* mail-config.c (add_row): Add a "gboolean required" argument, and
+	set its value on the entry.
+	(create_source, create_transport): Create rows for URL elements if
+	the URL ALLOWs them. Mark them required if it NEEDs them.
+	(service_note_doneness): Only require the required fields to be
+	filled in.
+
+	Now the IMAP config page allows the user to enter a path, but
+	doesn't require it.
+	
 2000-07-13  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* mail-ops.c (real_fetch_mail): Back to the old way to avoid
